[package]
name = "csharp-code-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xlsx-read = { path = "../xlsx-read" }
clap = { version = "4.1.8", features = ["derive"] }
lazy_static = "1.4.0"

[profile.release]
opt-level = 3